--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@finsweet/ts-utils",
-  "version": "0.7.7",
+  "version": "0.7.8",
   "description": "Typescript utils for custom Webflow projects.",
   "main": "index.ts",
   "module": "index.ts",
+  "sideEffects": false,
   "type": "module",
   "repository": {
     "type": "git",
@@ -30,12 +31,12 @@
   "homepage": "https://github.com/finsweet/ts-utils#readme",
   "devDependencies": {
     "@finsweet/eslint-config": "^1.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "eslint": "^7.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.0",
-    "typescript": "^4.3.2"
+    "prettier": "^2.3.1",
+    "typescript": "^4.3.4"
   }
 }
