--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@finsweet/ts-utils",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "description": "Typescript utils for custom Webflow projects.",
   "main": "index.ts",
   "module": "index.ts",
+  "files": [
+    "index.ts"
+  ],
   "sideEffects": false,
   "type": "module",
   "repository": {
