--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "url": "git+https://github.com/finsweet/ts-utils.git"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint --ignore-path .gitignore ./src && prettier --check ./src",
+    "check": "tsc --noEmit",
+    "format": "prettier --write ./src",
+    "release": "changeset publish",
+    "update": "pnpm update -i -L"
   },
   "keywords": [
     "webflow",
@@ -34,13 +39,16 @@
   },
   "homepage": "https://github.com/finsweet/ts-utils#readme",
   "devDependencies": {
-    "@finsweet/eslint-config": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
+    "@changesets/changelog-git": "^0.1.13",
+    "@changesets/cli": "^2.25.0",
+    "@finsweet/eslint-config": "^1.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.1",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4"
   }
 }
