--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint --ignore-path .gitignore ./src && prettier --check ./src",
+    "lint:fix": "eslint --ignore-path .gitignore ./src --fix",
     "check": "tsc --noEmit",
     "format": "prettier --write ./src",
     "release": "changeset publish",
@@ -39,16 +40,15 @@
   },
   "homepage": "https://github.com/finsweet/ts-utils#readme",
   "devDependencies": {
-    "@changesets/changelog-git": "^0.1.13",
-    "@changesets/cli": "^2.25.0",
-    "@finsweet/eslint-config": "^1.1.5",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "eslint": "^8.25.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@changesets/changelog-git": "^0.1.14",
+    "@changesets/cli": "^2.26.0",
+    "@finsweet/eslint-config": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "prettier": "^2.8.2",
+    "typescript": "^4.9.4"
   }
 }
