--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "url": "git+https://github.com/finsweet/ts-utils.git"
   },
   "scripts": {
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs",
     "build": "tsc",
     "lint": "eslint --ignore-path .gitignore ./src && prettier --check ./src",
     "lint:fix": "eslint --ignore-path .gitignore ./src --fix",
@@ -50,5 +53,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.2",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@finsweet/docs-theme": "^0.1.2"
   }
 }
