--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "homepage": "https://github.com/finsweet/ts-utils#readme",
   "devDependencies": {
+    "@algolia/client-search": "^4.15.0",
     "@changesets/changelog-git": "^0.1.14",
     "@changesets/cli": "^2.26.0",
     "@finsweet/eslint-config": "^2.0.2",
@@ -51,10 +52,10 @@
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "@finsweet/docs-theme": "^0.1.2"
+    "typescript": "^4.9.5",
+    "vitepress": "^1.0.0-alpha.49",
+    "vue": "^3.2.47"
   }
 }
