--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
     "@changesets/changelog-git": "^0.1.14",
     "@changesets/cli": "^2.26.0",
     "@finsweet/eslint-config": "^2.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5",
-    "vitepress": "^1.0.0-alpha.49",
+    "vitepress": "1.0.0-alpha.50",
     "vue": "^3.2.47"
   }
 }
