--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
   },
   "homepage": "https://github.com/finsweet/ts-utils#readme",
   "devDependencies": {
-    "@algolia/client-search": "^4.15.0",
     "@changesets/changelog-git": "^0.1.14",
     "@changesets/cli": "^2.26.0",
+    "@finsweet/docs-theme": "^0.1.7",
     "@finsweet/eslint-config": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
